Fix broken layout on mobile devices
It added a horizontal scroll at pages with width < 340px

--- a/styles.scss
+++ b/styles.scss
@@ -162,6 +162,7 @@ strong {
     
     .c-list__item {
         margin-bottom: $SPACING-3;
+        word-wrap: break-word;
 
         a {
             padding-bottom: 2px;
